{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 5,
  "lineage": "78e4f515-0990-5241-e99c-96f56d7e57a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "privatert",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0aecab88971cc036e",
            "id": "rtb-0aecab88971cc036e",
            "owner_id": "381144738155",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "default-rt"
            },
            "vpc_id": "vpc-0cbc1aea7344f87cc"
          },
          "dependencies": [
            "aws_vpc.lavpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "laigw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0addc8ff84d1e3b2c",
            "owner_id": "381144738155",
            "tags": {
              "Name": "la-igw"
            },
            "vpc_id": "vpc-0cbc1aea7344f87cc"
          },
          "dependencies": [
            "aws_vpc.lavpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b6773437d2bbf92c",
            "owner_id": "381144738155",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0addc8ff84d1e3b2c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public rt"
            },
            "vpc_id": "vpc-0cbc1aea7344f87cc"
          },
          "dependencies": [
            "aws_internet_gateway.laigw",
            "aws_vpc.lavpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lavpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381144738155:vpc/vpc-0cbc1aea7344f87cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0abaf264f43ba3b31",
            "default_route_table_id": "rtb-0aecab88971cc036e",
            "default_security_group_id": "sg-02807a8b32a6d5f90",
            "dhcp_options_id": "dopt-c550b2ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cbc1aea7344f87cc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0aecab88971cc036e",
            "owner_id": "381144738155",
            "tags": {
              "Name": "la-vpc"
            }
          }
        }
      ]
    }
  ]
}